--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -353,11 +353,13 @@ sup {
 
 a {
 	color: var(--bs-link-color);
-	text-decoration: underline
+	text-decoration: none
 }
 
 a:hover {
-	color: var(--bs-link-hover-color)
+	color: var(--bs-link-hover-color) ;
+	text-decoration: underline 2px;
+	text-underline-offset: 5px;
 }
 
 a:not([href]):not([class]),
@@ -3375,13 +3377,15 @@ textarea.form-control.is-invalid {
 .btn:hover {
 	color: var(--bs-btn-hover-color);
 	background-color: var(--bs-btn-hover-bg);
-	border-color: var(--bs-btn-hover-border-color)
+	border-color: var(--bs-btn-hover-border-color);
+	text-decoration: none;
 }
 
 .btn-check+.btn:hover {
 	color: var(--bs-btn-color);
 	background-color: var(--bs-btn-bg);
-	border-color: var(--bs-btn-border-color)
+	border-color: var(--bs-btn-border-color);
+	text-decoration: none;
 }
 
 .btn:focus-visible {
@@ -5545,7 +5549,7 @@ fieldset:disabled .btn {
 	--bs-progress-border-radius: 0.375rem;
 	--bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
 	--bs-progress-bar-color: #fff;
-	--bs-progress-bar-bg: #0d6efd;
+	--bs-progress-bar-bg: #38B000;
 	--bs-progress-bar-transition: width 0.6s ease;
 	display: flex;
 	height: var(--bs-progress-height);
