--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -358,14 +358,17 @@ a {
 
 a:hover {
 	color: var(--bs-link-hover-color) ;
-	text-decoration: underline 2px;
-	text-underline-offset: 5px;
 }
 
 a:not([href]):not([class]),
 a:not([href]):not([class]):hover {
 	color: inherit;
 	text-decoration: none
+}
+
+.my-link:hover {
+	text-decoration: underline 2px;
+	text-underline-offset: 5px;
 }
 
 code,
@@ -12816,6 +12819,11 @@ fieldset:disabled .btn {
 	.d-print-none {
 		display: none !important
 	}
+}
+
+::-webkit-file-upload-button {
+	color: white !important;
+	background-color: rgb(var(--bs-success-rgb)) !important;
 }
 
 /*# sourceMappingURL=bootstrap.min.css.map */
