--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3451,19 +3451,19 @@ fieldset:disabled .btn {
 
 .btn-secondary {
 	--bs-btn-color: #fff;
-	--bs-btn-bg: #6c757d;
-	--bs-btn-border-color: #6c757d;
+	--bs-btn-bg: rgb(var(--bs-secondary-rgb));
+	--bs-btn-border-color: rgb(var(--bs-secondary-rgb));
 	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg: #5c636a;
-	--bs-btn-hover-border-color: #565e64;
+	--bs-btn-hover-bg: rgb(var(--bs-secondary-rgb));
+	--bs-btn-hover-border-color: rgb(var(--bs-secondary-rgb));
 	--bs-btn-focus-shadow-rgb: 130, 138, 145;
 	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #565e64;
-	--bs-btn-active-border-color: #51585e;
+	--bs-btn-active-bg: rgb(var(--bs-secondary-rgb));
+	--bs-btn-active-border-color: rgb(var(--bs-secondary-rgb));
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 	--bs-btn-disabled-color: #fff;
-	--bs-btn-disabled-bg: #6c757d;
-	--bs-btn-disabled-border-color: #6c757d
+	--bs-btn-disabled-bg: rgb(var(--bs-secondary-rgb));
+	--bs-btn-disabled-border-color: rgb(var(--bs-secondary-rgb))
 }
 
 .btn-success {
