--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1056,6 +1056,10 @@ progress {
 }
 
 @media (min-width:576px) {
+	.h-sm-300px {
+		height: 300px;
+	}
+
 	.col-sm {
 		flex: 1 0 0%
 	}
@@ -1331,7 +1335,8 @@ progress {
 
 	.col-md-4 {
 		flex: 0 0 auto;
-		width: 33.33333333%
+		width: 33.33333333%;
+		height: 100%;
 	}
 
 	.col-md-5 {
@@ -8445,7 +8450,9 @@ fieldset:disabled .btn {
 .h-100 {
 	height: 100% !important
 }
-
+.h-300px {
+	height: 300px;
+}
 .h-auto {
 	height: auto !important
 }
@@ -9504,9 +9511,9 @@ fieldset:disabled .btn {
 
 .invisible {
 	visibility: hidden !important;
-	width: 0.1px;
-	height: 0.1px;
-	font-size: 0.1px;
+	width: 0px;
+	height: 0px;
+	font-size: 0px;
 	padding: 0;
 	margin: 0;
 }
@@ -10164,6 +10171,16 @@ fieldset:disabled .btn {
 }
 
 @media (min-width:768px) {
+	.rounded-md-top-start-4 {
+		border-top-left-radius: var(--bs-border-radius-xl) !important;
+	}
+	.rounded-md-top-end-4 {
+		border-top-right-radius: var(--bs-border-radius-xl) !important;
+	}
+	.rounded-md-bottom-4 {
+		border-bottom-left-radius: var(--bs-border-radius-xl) !important;
+		border-bottom-right-radius: var(--bs-border-radius-xl) !important;
+	}
 	.float-md-start {
 		float: left !important
 	}
